# PsyNetSkills

./: .cursorignore  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  actions-review.yaml  authors.yaml  index.html  pyproject.toml  skill-candidates.yaml
.github/scripts/: prepare-preview-pages.py  prepare-production-pages.py  push-pages-branch.sh  setup-attempt-deploy-aws.sh
.github/workflows/: dashboard-preview.yml  deploy-attempt.yml  pages.yml  validate.yml
actions/: index.html
attempts/: index.html
challenges/: index.html
challenges/adaptive-memory-testing/: CRITERIA.md  INSTRUCTIONS.md  index.html
challenges/adaptive-musical-preference/: INSTRUCTIONS.md  (+2 more)
dashboard/: hugo.toml
docs/: architecture.md  attempts.md  authors.md  challenges.md  dashboard.md  deploy-attempt.md  experiment-plan.md  index.md  psynet-reference.md  review.md  skills.md
js/: workflow-status.js
psynetsk_tools/: __init__.py  actions.py  authors.py  cursor_costs.py  dashboard.py  learning_action.py  learnings.py  pr_preview_cleanup.py  pr_preview_redirect.py  review.py  review_artifacts.py  review_model.py  timeline.py  validate.py
schemas/: review.schema.json
skills/: index.html
tests/: test_actions_copy_js.py  test_cursor_costs.py  test_dashboard.py  test_giscus.py  test_learnings.py  test_pages_publish_script.py  test_pr_preview_cleanup.py  test_pr_preview_redirect.py  test_public_tunnel_skill.py  test_review.py  test_review_artifacts.py  test_review_model.py  test_run_attempt_skill.py  test_timeline.py  test_validate.py  test_workflow_status_js.py
(+7972 files in other folders)
