[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "psynetsk-tools"
version = "0.1.0"
description = "Validation and dashboard tooling for the PsyNetSkills workshop repository."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
psynetsk-validate = "psynetsk_tools.validate:main"
psynetsk-export-dashboard-data = "psynetsk_tools.dashboard:main"

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["psynetsk_tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
